resolved z-index issue for space row on new form open

--- a/app/javascript/src/components/SpaceUsages/style.scss
+++ b/app/javascript/src/components/SpaceUsages/style.scss
@@ -127,7 +127,7 @@
 	@apply fixed top-0 left-0 bottom-0 right-0;
 	content: "";
 	background: rgba(0,0,0,0.5);
-	z-index: 2;
+	z-index: 4;
 }
 
 .required:after {
